--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ authors = [
 description = "A short description of your project"
 readme = "README.md"
 requires-python = ">=3.8"
-dependencies = []
+dependencies = [
+    "rdkit",
+]
 
 [project.optional-dependencies]
 dev = [
