--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,10 +19,44 @@ dependencies = [
 dev = [
     "pytest>=7.0",
     "pytest-cov>=4.0",
+    "ruff",
 ]
 
 [tool.pytest.ini_options]
 addopts = "-ra -q"
 testpaths = [
     "tests",
+]
+
+[tool.ruff]
+# Set maximum line length
+line-length = 100  # Change this number to your preferred length
+
+# Enable autofix behavior on save
+fix = true
+# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default
+select = ["E", "F"]
+# Exclude a variety of commonly ignored directories.
+exclude = [
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git",
+    ".git-rewrite",
+    ".hg",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".pytype",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "venv",
 ]
