--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ description = "A short description of your project"
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
-    "rdkit",
+    "rdkit>=2024.9.6",
 ]
 
 [project.optional-dependencies]
