--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ requires-python = ">=3.8"
 dependencies = [
     "matplotlib>=3.10.1",
     "networkx>=3.4.2",
+    "pandas>=2.2.3",
     "rdkit>=2024.9.6",
+    "scipy>=1.15.2",
 ]
 
 [project.optional-dependencies]
