--- a/requirements/requirements-dev.txt
+++ b/requirements/requirements-dev.txt
@@ -24,11 +24,15 @@ numpy==2.2.4
     # via
     #   contourpy
     #   matplotlib
+    #   pandas
     #   rdkit
+    #   scipy
 packaging==24.2
     # via
     #   matplotlib
     #   pytest
+pandas==2.2.3
+    # via chem-deg (../pyproject.toml)
 pillow==11.1.0
     # via
     #   matplotlib
@@ -44,10 +48,18 @@ pytest==8.3.5
 pytest-cov==6.0.0
     # via chem-deg (../pyproject.toml)
 python-dateutil==2.9.0.post0
-    # via matplotlib
+    # via
+    #   matplotlib
+    #   pandas
+pytz==2025.2
+    # via pandas
 rdkit==2024.9.6
     # via chem-deg (../pyproject.toml)
 ruff==0.11.2
     # via chem-deg (../pyproject.toml)
+scipy==1.15.2
+    # via chem-deg (../pyproject.toml)
 six==1.17.0
     # via python-dateutil
+tzdata==2025.2
+    # via pandas
