--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,9 +27,13 @@ dev = [
 ]
 
 [tool.pytest.ini_options]
-addopts = "-ra -q"
+minversion = "6.0"
+addopts = "-ra -q -v --cov=src --cov-report=term-missing"
 testpaths = [
-    "tests",
+    "test",
+]
+norecursedirs = [
+    "contrib",
 ]
 
 [tool.ruff.lint]
