--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -13,7 +13,9 @@ fonttools==4.57.0
 kiwisolver==1.4.8
     # via matplotlib
 matplotlib==3.10.1
-    # via chem-deg (../pyproject.toml)
+    # via
+    #   chem-deg (../pyproject.toml)
+    #   seaborn
 networkx==3.4.2
     # via chem-deg (../pyproject.toml)
 numpy==2.2.4
@@ -23,10 +25,13 @@ numpy==2.2.4
     #   pandas
     #   rdkit
     #   scipy
+    #   seaborn
 packaging==25.0
     # via matplotlib
 pandas==2.2.3
-    # via chem-deg (../pyproject.toml)
+    # via
+    #   chem-deg (../pyproject.toml)
+    #   seaborn
 pillow==11.1.0
     # via
     #   matplotlib
@@ -42,6 +47,8 @@ pytz==2025.2
 rdkit==2024.9.6
     # via chem-deg (../pyproject.toml)
 scipy==1.15.2
+    # via chem-deg (../pyproject.toml)
+seaborn==0.13.2
     # via chem-deg (../pyproject.toml)
 six==1.17.0
     # via python-dateutil
