--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,18 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools >= 77.0.3"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "chem-deg"
-version = "0.2.0"
+version = "0.2.1"
 authors = [
-    { name = "Your Name", email = "your.email@example.com" },
+    { name = "David Kuter" },
 ]
-description = "A short description of your project"
+description = "Chemical Degradation Simulation"
 readme = "README.md"
-requires-python = ">=3.8"
+license = "CC-BY-NC-4.0"
+license-files = ["LICEN[CS]E*"]
+requires-python = ">=3.12"
 dependencies = [
     "matplotlib>=3.10.1",
     "networkx>=3.4.2",
@@ -22,9 +24,11 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
+    "build",
     "pytest>=7.0",
     "pytest-cov>=4.0",
     "ruff",
+    "twine",
 ]
 
 [tool.pytest.ini_options]
@@ -69,3 +73,6 @@ exclude = [
     "node_modules",
     "venv",
 ]
+
+ [tool.setuptools.package-data]
+ "chem_deg" = ["assets/*"]
