--- a/requirements/requirements-dev.txt
+++ b/requirements/requirements-dev.txt
@@ -4,24 +4,54 @@
 #
 #    pip-compile --extra=dev --output-file=../requirements/requirements-dev.txt ../pyproject.toml
 #
+build==1.2.2.post1
+    # via chem-deg (../pyproject.toml)
+certifi==2025.4.26
+    # via requests
+charset-normalizer==3.4.2
+    # via requests
 contourpy==1.3.2
     # via matplotlib
 coverage[toml]==7.7.1
     # via pytest-cov
 cycler==0.12.1
     # via matplotlib
+docutils==0.21.2
+    # via readme-renderer
 fonttools==4.57.0
     # via matplotlib
+id==1.5.0
+    # via twine
+idna==3.10
+    # via requests
 iniconfig==2.1.0
     # via pytest
+jaraco-classes==3.4.0
+    # via keyring
+jaraco-context==6.0.1
+    # via keyring
+jaraco-functools==4.1.0
+    # via keyring
+keyring==25.6.0
+    # via twine
 kiwisolver==1.4.8
     # via matplotlib
+markdown-it-py==3.0.0
+    # via rich
 matplotlib==3.10.1
     # via
     #   chem-deg (../pyproject.toml)
     #   seaborn
+mdurl==0.1.2
+    # via markdown-it-py
+more-itertools==10.7.0
+    # via
+    #   jaraco-classes
+    #   jaraco-functools
 networkx==3.4.2
     # via chem-deg (../pyproject.toml)
+nh3==0.2.21
+    # via readme-renderer
 numpy==2.2.4
     # via
     #   contourpy
@@ -32,8 +62,10 @@ numpy==2.2.4
     #   seaborn
 packaging==24.2
     # via
+    #   build
     #   matplotlib
     #   pytest
+    #   twine
 pandas==2.2.3
     # via
     #   chem-deg (../pyproject.toml)
@@ -44,8 +76,14 @@ pillow==11.1.0
     #   rdkit
 pluggy==1.5.0
     # via pytest
+pygments==2.19.1
+    # via
+    #   readme-renderer
+    #   rich
 pyparsing==3.2.3
     # via matplotlib
+pyproject-hooks==1.2.0
+    # via build
 pytest==8.3.5
     # via
     #   chem-deg (../pyproject.toml)
@@ -60,6 +98,19 @@ pytz==2025.2
     # via pandas
 rdkit==2024.9.6
     # via chem-deg (../pyproject.toml)
+readme-renderer==44.0
+    # via twine
+requests==2.32.3
+    # via
+    #   id
+    #   requests-toolbelt
+    #   twine
+requests-toolbelt==1.0.0
+    # via twine
+rfc3986==2.0.0
+    # via twine
+rich==14.0.0
+    # via twine
 ruff==0.11.2
     # via chem-deg (../pyproject.toml)
 scipy==1.15.2
@@ -68,5 +119,11 @@ seaborn==0.13.2
     # via chem-deg (../pyproject.toml)
 six==1.17.0
     # via python-dateutil
+twine==6.1.0
+    # via chem-deg (../pyproject.toml)
 tzdata==2025.2
     # via pandas
+urllib3==2.4.0
+    # via
+    #   requests
+    #   twine
